[gd_scene load_steps=41 format=2]

[ext_resource path="res://Assets novos/PixelSplitter-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/control.gd" type="Script" id=2]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/highway.png" type="Texture" id=3]
[ext_resource path="res://Assets novos/Caminh√£o da Unipar.png" type="Texture" id=4]
[ext_resource path="res://Assets novos/Logo da Unipar.png" type="Texture" id=5]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/background-light.png" type="Texture" id=6]
[ext_resource path="res://Assets/Assets/Assets/Highway Artwork/Layers/highway-sky.png" type="Texture" id=7]
[ext_resource path="res://Scripts/caminhaoTelaInicial.gd" type="Script" id=8]
[ext_resource path="res://Assets novos/Novo titulo Uniway 2.png" type="Texture" id=9]
[ext_resource path="res://Musicas/som resposta certa.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Highway Artwork/Layers/highway-sky.png" type="Texture" id=11]
[ext_resource path="res://Assets novos/Fabrica.png" type="Texture" id=12]

[sub_resource type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 12 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 8 )
Button/styles/disabled = null
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 150
outline_size = 5
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 100
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=22]
size = 64
outline_size = 3
outline_color = Color( 0.290196, 0.290196, 0.290196, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=25]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=26]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
size = 100
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 50
outline_size = 3
outline_color = Color( 0.137255, 0.137255, 0.137255, 1 )
font_data = ExtResource( 1 )

[node name="Tela inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HighwaySky2" type="Sprite" parent="."]
position = Vector2( -901, 540 )
scale = Vector2( 4.8, 4.5 )
texture = ExtResource( 11 )

[node name="HighwaySky" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 4.8, 4.5 )
texture = ExtResource( 7 )

[node name="Fabrica" type="Sprite" parent="."]
position = Vector2( -934, 564 )
scale = Vector2( 1.33, 1.2 )
texture = ExtResource( 12 )

[node name="control" type="VBoxContainer" parent="."]
anchor_left = 0.55
anchor_top = 0.704
anchor_right = 0.55
anchor_bottom = 0.704
margin_left = -264.0
margin_top = -301.32
margin_right = 1.0
margin_bottom = 26.68
theme = SubResource( 11 )
custom_constants/separation = 50

[node name="StartButton" type="Button" parent="control"]
margin_right = 265.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../Exit")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.913725, 0.960784, 0.0901961, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "start"

[node name="Idioma" type="Button" parent="control"]
margin_top = 126.0
margin_right = 265.0
margin_bottom = 202.0
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.945098, 0.996078, 0.0980392, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Idioma"

[node name="Exit" type="Button" parent="control"]
margin_top = 252.0
margin_right = 265.0
margin_bottom = 328.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.94902, 0.937255, 0.0745098, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_colors/font_color_pressed = Color( 0.945098, 0.592157, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "sair"

[node name="Estrada 1" type="Sprite" parent="."]
position = Vector2( 202, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="Estrada 3" type="Sprite" parent="Estrada 1"]
position = Vector2( 127.842, 0 )
texture = ExtResource( 3 )

[node name="Estrada 4" type="Sprite" parent="Estrada 1"]
position = Vector2( 255.683, 0 )
texture = ExtResource( 3 )

[node name="Estrada 5" type="Sprite" parent="Estrada 1"]
position = Vector2( 383.525, 0 )
texture = ExtResource( 3 )

[node name="Estrada 6" type="Sprite" parent="Estrada 1"]
position = Vector2( 511.366, 0 )
texture = ExtResource( 3 )

[node name="Estrada 7" type="Sprite" parent="."]
position = Vector2( -202, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="Estrada 8" type="Sprite" parent="."]
position = Vector2( -606, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="Estrada 9" type="Sprite" parent="."]
position = Vector2( -1010, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="Estrada 10" type="Sprite" parent="."]
position = Vector2( -1414, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="Estrada 11" type="Sprite" parent="."]
position = Vector2( -1818, 934 )
scale = Vector2( 3.16016, 2.90347 )
texture = ExtResource( 3 )

[node name="VBoxIdioma" type="VBoxContainer" parent="."]
visible = false
margin_left = 753.0
margin_top = 368.0
margin_right = 1124.0
margin_bottom = 714.0
custom_constants/separation = 50
alignment = 1

[node name="PT-BR" type="Button" parent="VBoxIdioma"]
margin_right = 371.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 13 )
text = "PT-BR"
flat = true

[node name="English" type="Button" parent="VBoxIdioma"]
margin_top = 132.0
margin_right = 371.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 14 )
text = "English"
flat = true

[node name="Spanish" type="Button" parent="VBoxIdioma"]
margin_top = 264.0
margin_right = 371.0
margin_bottom = 346.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 15 )
text = "Spanish"
flat = true

[node name="Idioma" type="Label" parent="."]
visible = false
margin_left = 638.0
margin_top = 98.0
margin_right = 1254.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 16 )
text = "Idioma"

[node name="VoltarIdioma" type="Button" parent="."]
visible = false
margin_right = 12.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 17 )
text = "Voltar"
flat = true

[node name="quemSomos" type="Button" parent="."]
margin_left = 12.0
margin_top = 10.0
margin_right = 458.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 18 )
text = "Quem somos"
flat = true
align = 0

[node name="Unipar" type="Button" parent="."]
margin_left = 12.0
margin_top = 92.0
margin_right = 295.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 19 )
text = "Unipar"
flat = true

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 626.0
margin_top = 394.0
margin_right = 1284.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 20 )
align = 1

[node name="Label" type="Label" parent="LineEdit"]
margin_left = -171.0
margin_top = -91.0
margin_right = 822.0
margin_bottom = -15.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 21 )
text = "insira seu nome"
align = 1

[node name="continuar" type="Button" parent="LineEdit/Label"]
margin_left = 284.0
margin_top = 263.0
margin_right = 694.0
margin_bottom = 345.0
custom_colors/font_color_disabled = Color( 0.290196, 0.290196, 0.290196, 1 )
custom_colors/font_color_focus = Color( 0.913725, 0.960784, 0.0901961, 1 )
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_constants/hseparation = 1
custom_fonts/font = SubResource( 22 )
disabled = true
text = "Continuar"
flat = true

[node name="somCorreto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Top 5" type="Button" parent="."]
margin_left = 1699.0
margin_top = 14.0
margin_right = 1911.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 23 )
text = "Top 5"
flat = true

[node name="T√≠tulo Top 5" type="Label" parent="."]
visible = false
margin_top = 17.0
margin_right = 1920.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 24 )
text = "os 5 melhores"
align = 1

[node name="Top1" type="Label" parent="T√≠tulo Top 5"]
margin_top = 225.0
margin_right = 1920.0
margin_bottom = 301.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 25 )
align = 1

[node name="Top2" type="Label" parent="T√≠tulo Top 5"]
margin_top = 325.0
margin_right = 1920.0
margin_bottom = 401.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 25 )
align = 1

[node name="Top3" type="Label" parent="T√≠tulo Top 5"]
margin_top = 425.0
margin_right = 1920.0
margin_bottom = 501.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 25 )
align = 1

[node name="Top4" type="Label" parent="T√≠tulo Top 5"]
margin_top = 525.0
margin_right = 1920.0
margin_bottom = 601.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 25 )
align = 1

[node name="Top5" type="Label" parent="T√≠tulo Top 5"]
margin_top = 625.0
margin_right = 1920.0
margin_bottom = 701.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 25 )
align = 1

[node name="voltarRanking" type="Button" parent="."]
visible = false
margin_left = 13.0
margin_top = 12.0
margin_right = 270.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 26 )
text = "voltar"
flat = true

[node name="TituloDoJogo" type="Sprite" parent="."]
position = Vector2( 937, 289 )
scale = Vector2( 1.92, 1.8 )
texture = ExtResource( 9 )

[node name="posteDeLuz" type="Sprite" parent="."]
position = Vector2( 112.469, 710.261 )
scale = Vector2( 3.744, 2.772 )
texture = ExtResource( 6 )

[node name="Background-light2" type="Sprite" parent="posteDeLuz"]
position = Vector2( 431.563, 2.54401 )
texture = ExtResource( 6 )

[node name="Background-light4" type="Sprite" parent="."]
position = Vector2( -1504, 713 )
scale = Vector2( 3.744, 2.772 )
texture = ExtResource( 6 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
pause_mode = 2
process_priority = 1
script = ExtResource( 8 )

[node name="caminh√£oUnipar" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 1730, 570 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D/caminh√£oUnipar"]
position = Vector2( -77, -3 )
scale = Vector2( 0.48, 0.45 )
current = true
limit_left = -1860
limit_top = 0
limit_right = 1920
limit_bottom = 1080

[node name="LogoDaUnipar" type="Sprite" parent="KinematicBody2D/caminh√£oUnipar"]
position = Vector2( -25, 19.5 )
scale = Vector2( 0.105, 0.085 )
texture = ExtResource( 5 )

[node name="desenvolvedores" type="Label" parent="."]
visible = false
margin_left = 3.0
margin_top = 12.0
margin_right = 1916.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 27 )
text = "Desenvolvedores"
align = 1

[node name="1" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 177.0
margin_right = 1915.0
margin_bottom = 253.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Marcelo Miguel Pereira de assis"
align = 1

[node name="2" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 291.0
margin_right = 1915.0
margin_bottom = 367.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Marcela Issa Avila Vieiralves Martins"
align = 1

[node name="3" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 401.0
margin_right = 1915.0
margin_bottom = 477.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Gustavo Gouveia"
align = 1

[node name="4" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 505.0
margin_right = 1915.0
margin_bottom = 581.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Gabrielle Mitoso araujo santos"
align = 1

[node name="5" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 616.0
margin_right = 1915.0
margin_bottom = 692.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Guilherme Pardi Borges"
align = 1

[node name="6" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 727.0
margin_right = 1915.0
margin_bottom = 803.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "joao Caue hirata machado"
align = 1

[node name="7" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 833.0
margin_right = 1915.0
margin_bottom = 909.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Breno Santana de Lima"
align = 1

[node name="8" type="Label" parent="desenvolvedores"]
margin_left = -1.0
margin_top = 927.0
margin_right = 1915.0
margin_bottom = 1003.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_fonts/font = SubResource( 28 )
text = "Moyses Birman"
align = 1

[node name="voltarDev" type="Button" parent="desenvolvedores"]
margin_top = -9.0
margin_right = 206.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 29 )
text = "voltar"
flat = true

[node name="gitHub" type="Button" parent="desenvolvedores"]
margin_left = 1696.0
margin_top = -9.0
margin_right = 1914.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.972549, 0.976471, 0.941176, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.921569, 0.0745098, 1 )
custom_fonts/font = SubResource( 29 )
text = "GitHub"
flat = true

[connection signal="pressed" from="control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="control/Idioma" to="." method="_on_Idioma_pressed"]
[connection signal="pressed" from="control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxIdioma/PT-BR" to="." method="_on_PTBR_pressed"]
[connection signal="pressed" from="VBoxIdioma/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="VBoxIdioma/Spanish" to="." method="_on_Spanish_pressed"]
[connection signal="pressed" from="VoltarIdioma" to="." method="_on_VoltarIdioma_pressed"]
[connection signal="pressed" from="quemSomos" to="." method="_on_quemSomos_pressed"]
[connection signal="pressed" from="Unipar" to="." method="_on_Unipar_pressed"]
[connection signal="pressed" from="LineEdit/Label/continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Top 5" to="." method="_on_Top_5_pressed"]
[connection signal="pressed" from="voltarRanking" to="." method="_on_voltarRanking_pressed"]
[connection signal="pressed" from="desenvolvedores/voltarDev" to="." method="_on_voltarDev_pressed"]
[connection signal="pressed" from="desenvolvedores/gitHub" to="." method="_on_gitHub_pressed"]
